# Keytie-messenger

./: README.md  КП_МИТП_ПояснительнаяЗаписка.docx
.github/workflows/: ci.yml
secure-messenger/: .gitignore  docker-compose.yml  requirements.txt
secure-messenger/client/: gui.py  network.py  ratchet.py  test_network.py  test_ratchet.py  test_x3dh.py  x3dh.py
secure-messenger/client/tests/: conftest.py  test_crypto.py  test_group.py  test_ratchet.py  test_x3dh.py
secure-messenger/secure_core/: Cargo.toml  pyproject.toml  test_encrypt.py
secure-messenger/secure_core/src/: lib.rs
secure-messenger/server/: Dockerfile  main.py
