[package]
name = "secure_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "secure_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py39"] }
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
